@@ -2,7 +2,7 @@ PADRINO_ROOT = File.dirname(__FILE__) unless defined? PADRINO_ROOT
 # Remove this comment if you want do some like this: ruby PADRINO_ENV=test app.rb
 #
 # require 'rubygems'
-# require 'lib/padrino-core'
+# require 'padrino-core'
 #
 
 class SimpleDemo < Padrino::Application
@@ -26,6 +26,8 @@ end
 #
 # Padrino.mount_core("SimpleDemo")
 # Padrino.run! unless Padrino.loaded? # If you enable reloader prevent to re-run the app
+#
+# Then run it from your console: ruby -I"lib" test/fixtures/apps/simple.rb
 #
 
 Padrino.load!
