@@ -2,8 +2,11 @@
 
 == 0.9.11 (Unreleased)
 
+* Improved reloader (that fixes also problems with MM)
+* Core refactoring
+* Fixed mounter in certain scenarios (i.e. single app file)
 * Fixed a problem with extensions since Sinatra#register extend every thing
-* Fixed a problem when reloading apps
+* Fixed a problem when reloading apps (W)
 * Fixed MongoId adapter using git legacy branch instead (un)stable gem
 * Moved bundler dependency from padrino-core to padrino-gen
 * Moved I18n dependency from padrino-core to padrino-helpers
